--- a/rise-connection-service/serverless/serverless.yml
+++ b/rise-connection-service/serverless/serverless.yml
@@ -1,78 +1,49 @@
 service: rise-connection-service
 #variablesResolutionMode: 20210326
 
+frameworkVersion: ^2.50.0
 
 plugins:
   localPath: "/usr/local/lib/node_modules/"
   modules:
-    - serverless-prune-plugin    
+    - serverless-prune-plugin
     - serverless-plugin-existing-s3
-    - serverless-offline 
+    - ./../../common/serverless/plugins/no-logs-group
 
 custom:
-  #fromTerraform: ${file(../../common/serverless/sls_terraform_outputs.js)}
-  filecounterTableName: file-counter-${opt:stage, self:provider.stage}
-  tableName: object-processed-metadata-${opt:stage, self:provider.stage}
-  middlewarestagingdata: middleware-staging-data-${opt:stage, self:provider.stage}
+  fromTerraform: ${file(../../common/serverless/sls_terraform_outputs.js)}
+  userProfileTable: userprofile
   prune:
     automatic: true
     number: 1
 
 provider:
   name: aws
-  runtime: "nodejs14.x"
-  memorySize: 512
-  stage: dev
-  region: "eu-west-1"
-  stackName: sls-${opt:stage, self:provider.stage}-${self:service}-stack
- # stackTags: ${self:custom.fromTerraform.common_tags}
- # tags: ${self:custom.fromTerraform.common_tags}
+  runtime: ${self:custom.fromTerraform.node_runtime}
+  memorySize: 1024
+  stage: ${opt:stage}
+  region: ${self:custom.fromTerraform.region}
+  stackName: sls-${self:service}-${opt:stage, self:provider.stage}-stack
+  stackTags: ${self:custom.fromTerraform.common_tags}
+  tags: ${self:custom.fromTerraform.common_tags}
+  deploymentBucket: ${self:custom.fromTerraform.application_bucketname}
+  iam:
+    role: ${self:custom.fromTerraform.mentorship_lambda_iam}  
+  
+  apiGateway:
+    restApiId: ${self:custom.fromTerraform.mentorship_rest_api_id}
+    restApiRootResourceId: ${self:custom.fromTerraform.mentorship_rest_api_root_resource_id}  
   vpc:
     securityGroupIds:
-      - "sg-0977564d060d554ed"
-    subnetIds: 
-      - "subnet-0b74c02a9275bb954"
-      - "subnet-0ba5acc2b6e18714a"
-  deploymentBucket:
-    name: "dev-ui-mentorship-tvx-test-cloud"
-  apiGateway:
-    restApiId: "8sgqsx25bc"
-    restApiRootResourceId: "vhblyqi7c3"
-  environment: ${file(./configs/providers/${self:provider.name}/${opt:stage, self:provider.stage}/env.yml)}
-  #logs:
-    #restApi: "${self:custom.fromTerraform.private_api_gateway_logs_enabled}"
-  iamManagedPolicies: "arn:aws:iam::148807490170:role/dev-mentorship-iam-lambda-role"
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:DescribeTable
-        - dynamodb:Query
-        - dynamodb:Scan
-        - dynamodb:GetItem
-        - dynamodb:PutItem
-        - dynamodb:UpdateItem
-        - dynamodb:DeleteItem
-        - dynamodb:BatchGetItem
-        - ssm:GetParameter*
-        - SNS:Publish
-        - SNS:RemovePermission
-        - SNS:SetTopicAttributes
-        - SNS:ListSubscriptionsByTopic
-        - SNS:GetTopicAttributes
-        - SNS:Receive
-        - SNS:AddPermission
-        - SNS:Subscribe
-       
-      Resource:
-        #- "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.filecounterTableName}"  
-        #- "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.tableName}"
-        #- "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.middlewarestagingdata}"
-        - "*"
-        #- "arn:aws:sns:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:${opt:stage, self:provider.stage}-eif-audit-topic"
+      - ${self:custom.fromTerraform.mentorship_sg}
+    subnetIds:
+      - ${self:custom.fromTerraform.subnet_private_0}
+      - ${self:custom.fromTerraform.subnet_private_1}
+  logs:
+    restApi: "${self:custom.fromTerraform.mentorship_rest_api_id}"
+    frameworkLambda: false
+  environment:
+    ${file(./configs/providers/${self:provider.name}/${opt:stage, self:provider.stage}/env.yml)}
 
-functions: 
-  - ${file(./configs/functions/rise-connection-service.yml)}
+functions: ${file(./configs/functions/functions.yml)}
 
-
-# resources:
-#   - ${file(./configs/resources/log-group-and-subscription.yml)}
