Changes for Dynamic Connection Service

--- a/rise-connection-service/serverless/serverless.yml
+++ b/rise-connection-service/serverless/serverless.yml
@@ -26,8 +26,8 @@ provider:
   stackTags: ${self:custom.fromTerraform.common_tags}
   tags: ${self:custom.fromTerraform.common_tags}
   deploymentBucket: ${self:custom.fromTerraform.application_bucketname}
-  # iam:
-  role: ${self:custom.fromTerraform.mentorship_lambda_iam}  
+  iam:
+    role: ${self:custom.fromTerraform.mentorship_lambda_iam}  
   
   apiGateway:
     restApiId: ${self:custom.fromTerraform.mentorship_rest_api_id}
@@ -46,5 +46,5 @@ provider:
 
 functions: ${file(./configs/functions/rise-connection-service.yml)}
 
-# resources:
-#   - ${file(./configs/resources/authorizer.yml)} 
+resources:
+  - ${file(./configs/resources/log-group-and-subscription.yml)} 
