Changes for Api gateway

--- a/rise-connection-service/serverless/configs/functions/functions.yml
+++ b/rise-connection-service/serverless/configs/functions/functions.yml
@@ -9,10 +9,10 @@
 
     events:
     - http:
-        path: rise/connection/{type}/{email_id}
+        path: connection/{type}/{email_id}
         method: get
     - http:
-        path: rise/connection/{mentee_email_id}/{mentor_email_id}
+        path: connection/{mentee_email_id}/{mentor_email_id}
         method: put
 
 # RISE:
