--- a/rise-connection-service/serverless/configs/functions/functions.yml
+++ b/rise-connection-service/serverless/configs/functions/functions.yml
@@ -12,7 +12,7 @@
         path: connection/{type}/{email_id}
         method: get
     - http:
-        path: connection/{type}/{mentor_email_id}
+        path: connection/{type}/{email_id}
         method: put
 
 # RISE:
