--- a/rise-connection-service/serverless/configs/providers/aws/dev/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/dev/env.yml
@@ -26,3 +26,5 @@ CacheTTL: 100
 BUCKET_NAME: tvx-middleware-dev
 DELAY_IN_SECOND: 1
 ERROR_CODE_TO_CHECK: ETIMEOUT
+
+TABLE_NAME: rise-connection-dev
