--- a/rise-connection-service/serverless/configs/providers/aws/preprod/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/preprod/env.yml
@@ -20,3 +20,5 @@ TOPIC_NAME: ${opt:stage, self:provider.stage}-eif-audit-topic
 ENVIRONMENT: ${opt:stage, self:provider.stage}
 VPC_SNS_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-sns-endpoint}
 CacheTTL: 100
+
+TABLE_NAME: rise-connection-preprod
