--- a/rise-connection-service/serverless/configs/providers/aws/production/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/production/env.yml
@@ -23,3 +23,5 @@ CacheTTL: 100
 BUCKET_NAME: tvx-middleware-production
 DELAY_IN_SECOND: 1
 ERROR_CODE_TO_CHECK: ETIMEOUT
+
+TABLE_NAME: rise-connection-production
