--- a/rise-connection-service/serverless/configs/providers/aws/uat/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/uat/env.yml
@@ -23,3 +23,6 @@ CacheTTL: 100
 BUCKET_NAME: tvx-middleware-uat
 DELAY_IN_SECOND: 1
 ERROR_CODE_TO_CHECK: ETIMEOUT
+
+
+TABLE_NAME: rise-connection-uat
