--- a/rise-connection-service/serverless/configs/resources/rise-connection.yml
+++ b/rise-connection-service/serverless/configs/resources/rise-connection.yml
@@ -6,12 +6,12 @@
         AttributeDefinitions:
           - AttributeName: "email_id"
             AttributeType: "S" 
-          - AttributeName: "type"
+          - AttributeName: "user_type"
             AttributeType: "S"   
         KeySchema:
           - AttributeName: "email_id"
             KeyType: "HASH"
-          - AttributeName: "type"
+          - AttributeName: "user_type"
             KeyType: "RANGE"
         BillingMode: "PAY_PER_REQUEST"
         StreamSpecification:
