--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -338,13 +338,13 @@ workflows:
       #           - master
       #           - feature/dit
 
-      - lambda-job:
-          name: rise-connection-service
-          requires:
-            - s3-download
-          filters:
-            branches:
-              only:
-                - develop
-                - master
-                - feature/dit
+      # - lambda-job:
+      #     name: rise-connection-service
+      #     requires:
+      #       - s3-download
+      #     filters:
+      #       branches:
+      #         only:
+      #           - develop
+      #           - master
+      #           - feature/dit
