--- a/rise-connection-service/serverless/configs/providers/aws/dev/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/dev/env.yml
@@ -27,4 +27,4 @@ BUCKET_NAME: tvx-middleware-dev
 DELAY_IN_SECOND: 1
 ERROR_CODE_TO_CHECK: ETIMEOUT
 
-TABLE_NAME: rise-connection-dev
+TABLE_NAME: rise-connections-dev
