--- a/rise-connection-service/serverless/configs/providers/aws/local/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/local/env.yml
@@ -25,4 +25,4 @@ CacheTTL: 100
 DELAY_IN_SECOND: 1
 ERROR_CODE_TO_CHECK: ETIMEOUT
 
-TABLE_NAME: rise-connection-dev
+TABLE_NAME: rise-connections-dev
