--- a/rise-connection-service/serverless/serverless.yml
+++ b/rise-connection-service/serverless/serverless.yml
@@ -13,7 +13,7 @@ custom:
   fromTerraform: ${file(../../common/serverless/sls_terraform_outputs.js)}
   filecounterTableName: file-counter-${opt:stage, self:provider.stage}
   middlewarestagingdata: middleware-staging-data-${opt:stage, self:provider.stage}
-  tableName: rise-connection-${opt:stage, self:provider.stage}
+  tableName: rise-connections-${opt:stage, self:provider.stage}
   prune:
     automatic: true
     number: 1
