Changes for Creating Topic

--- a/statistics-event-handler/serverless/serverless.yml
+++ b/statistics-event-handler/serverless/serverless.yml
@@ -11,9 +11,7 @@ plugins:
 
 custom:
   fromTerraform: ${file(../../common/serverless/sls_terraform_outputs.js)}
-  filecounterTableName: file-counter-${opt:stage, self:provider.stage}
-  middlewarestagingdata: middleware-staging-data-${opt:stage, self:provider.stage}
-  queuname: rise-connection-${opt:stage, self:provider.stage}
+  queueName: rise-audit-queue-${opt:stage, self:provider.stage}
   prune:
     automatic: true
     number: 1
@@ -50,4 +48,4 @@ functions: ${file(./configs/functions/functions.yml)}
 
 resources:
   - ${file(./configs/resources/log-group-and-subscription.yml)}
-  - ${file(./configs/resources/rise-connection.yml)}
+  - ${file(./configs/resources/sns-topic.yml)}
