--- a/statistics-event-handler/serverless/serverless.yml
+++ b/statistics-event-handler/serverless/serverless.yml
@@ -47,5 +47,7 @@ provider:
 functions: ${file(./configs/functions/functions.yml)}
 
 resources:
+
   - ${file(./configs/resources/log-group-and-subscription.yml)}
   - ${file(./configs/resources/sns-topic.yml)}
+  - ${file(./configs/resources/rise-audit-queue.yml)}
