--- a/statistics-event-handler/serverless/configs/resources/rise-audit-queue.yml
+++ b/statistics-event-handler/serverless/configs/resources/rise-audit-queue.yml
@@ -42,27 +42,27 @@ Resources:
         Queues:
           - Ref: "RiseAuditQueue"
 
-  RtsQueueSubscription:
+  RiseAuditQueueSubscription:
       Type: 'AWS::SNS::Subscription'
       Properties:
-        TopicArn: "arn:aws:sns:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
+        TopicArn: "arn:aws:sns:"arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
         Endpoint: !GetAtt
-          - RtsQueue
+          - RiseAuditQueue
           - Arn
-        FilterPolicy:
-          interfaceName:  [{"prefix": "rts"}]
+        # FilterPolicy:
+        #   interfaceName:  []
         Protocol: sqs
         RawMessageDelivery: 'false'
 
-  AuditRtsLogGroup:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: /aws/lambda/${opt:stage, self:provider.stage}-${self:service}
-      RetentionInDays: ${self:custom.fromTerraform.middleware_cloudwatch_log_group_retention_period}
-  RtsUiTransformerSubscriptionFilter:
-    Type: AWS::Logs::SubscriptionFilter
-    Properties: 
-      DestinationArn: arn:aws:lambda:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:function:datadog-log-shipper-lambda-${self:provider.stage}
-      FilterPattern: ''
-      LogGroupName: 
-        Ref: AuditRtsLogGroup
+  # AuditRtsLogGroup:
+  #   Type: AWS::Logs::LogGroup
+  #   Properties:
+  #     LogGroupName: /aws/lambda/${opt:stage, self:provider.stage}-${self:service}
+  #     RetentionInDays: ${self:custom.fromTerraform.middleware_cloudwatch_log_group_retention_period}
+  # RtsUiTransformerSubscriptionFilter:
+  #   Type: AWS::Logs::SubscriptionFilter
+  #   Properties: 
+  #     DestinationArn: arn:aws:lambda:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:function:datadog-log-shipper-lambda-${self:provider.stage}
+  #     FilterPattern: ''
+  #     LogGroupName: 
+  #       Ref: AuditRtsLogGroup
