--- a/statistics-event-handler/serverless/configs/resources/rise-audit-queue.yml
+++ b/statistics-event-handler/serverless/configs/resources/rise-audit-queue.yml
@@ -45,7 +45,7 @@ Resources:
   RiseAuditQueueSubscription:
       Type: 'AWS::SNS::Subscription'
       Properties:
-        TopicArn: "arn:aws:sns:"arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
+        TopicArn: "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
         Endpoint: !GetAtt
           - RiseAuditQueue
           - Arn
