--- a/statistics-event-handler/serverless/serverless.yml
+++ b/statistics-event-handler/serverless/serverless.yml
@@ -49,5 +49,5 @@ functions: ${file(./configs/functions/functions.yml)}
 resources:
 
   - ${file(./configs/resources/log-group-and-subscription.yml)}
-  - ${file(./configs/resources/sns-topic.yml)}
+  # - ${file(./configs/resources/sns-topic.yml)}
   - ${file(./configs/resources/rise-audit-queue.yml)}
