--- a/rise-event-sub/serverless/configs/providers/aws/dev/env.yml
+++ b/rise-event-sub/serverless/configs/providers/aws/dev/env.yml
@@ -14,7 +14,7 @@ STAGING_DB_NAME: staging-data-${opt:stage, self:provider.stage}
 STAGING_DB_ID: id
 STAGING_DB_SORT_KEY: recNo
 ALLOWED_BATCHING_EVENT_PATTERNS: "transform-post"
-QUEUE_URL: https://sqs.${self:custom.fromTerraform.middleware_region}.amazonaws.com/${self:custom.fromTerraform.middleware_aws_account_id}/${self:custom.queueName}-${opt:stage}
+QUEUE_URL: https://sqs.${self:custom.fromTerraform.region}.amazonaws.com/${self:custom.fromTerraform.aws_account_id}/${self:custom.queueName}-${opt:stage}
 TIME_TO_LEAVE_SECONDS: 10800
 JOB_EXECUTION_STATUS_TABLE_SUFFIX: job-execution-status-${opt:stage, self:provider.stage}
 CONDITIONAL_CHECK_EXCEPTION_CODE : ConditionalCheckFailedException
