--- a/rise-dynamic-service/serverless/serverless.yml
+++ b/rise-dynamic-service/serverless/serverless.yml
@@ -64,11 +64,11 @@ provider:
         - SNS:Subscribe
        
       Resource:
-        #- "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.filecounterTableName}"  
-        #- "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.tableName}"
-        #- "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.middlewarestagingdata}"
+        #- "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:table/${self:custom.filecounterTableName}"  
+        #- "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:table/${self:custom.tableName}"
+        #- "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:table/${self:custom.middlewarestagingdata}"
         - "*"
-        #- "arn:aws:sns:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:${opt:stage, self:provider.stage}-eif-audit-topic"
+        #- "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${opt:stage, self:provider.stage}-eif-audit-topic"
 
 functions: 
   - ${file(./configs/functions/rise-service.yml)}
