--- a/rise-event-sub/serverless/configs/resources/success-queue.yml
+++ b/rise-event-sub/serverless/configs/resources/success-queue.yml
@@ -27,14 +27,14 @@ Resources:
               Action: "SQS:SendMessage"
               Condition:
                 ArnEquals:
-                  "aws:SourceArn": "arn:aws:sns:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
+                  "aws:SourceArn": "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
         Queues:
           - Ref: "SuccessQueue"
 
   SuccessQueueSubscription:
       Type: 'AWS::SNS::Subscription'
       Properties:
-        TopicArn: "arn:aws:sns:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
+        TopicArn: "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
         Endpoint: !GetAtt
           - SuccessQueue
           - Arn
@@ -52,7 +52,7 @@ Resources:
   AuditSuccessSubscriptionFilter:
     Type: AWS::Logs::SubscriptionFilter
     Properties: 
-      DestinationArn: arn:aws:lambda:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:function:datadog-log-shipper-lambda-${self:provider.stage}
+      DestinationArn: arn:aws:lambda:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:function:datadog-log-shipper-lambda-${self:provider.stage}
       FilterPattern: ''
       LogGroupName: 
         Ref: AuditSuccessLogGroup
