--- a/rise-event-sub/serverless/serverless.yml
+++ b/rise-event-sub/serverless/serverless.yml
@@ -18,24 +18,30 @@ custom:
 provider:
   name: aws
   runtime: ${self:custom.fromTerraform.node_runtime}
-  memorySize: 3008
+  memorySize: 1024
   stage: ${opt:stage}
-  region: ${self:custom.fromTerraform.middleware_region}
+  region: ${self:custom.fromTerraform.region}
   stackName: sls-${self:service}-${opt:stage, self:provider.stage}-stack
-  stackTags: ${self:custom.fromTerraform.middleware_common_tags}
-  tags: ${self:custom.fromTerraform.middleware_common_tags}
-  deploymentBucket:
-    name: ${self:custom.fromTerraform.middleware_deployment_bucket_name}
-  environment:
-    ${file(./configs/providers/${self:provider.name}/${opt:stage, self:provider.stage}/env.yml)}
+  stackTags: ${self:custom.fromTerraform.common_tags}
+  tags: ${self:custom.fromTerraform.common_tags}
+  deploymentBucket: ${self:custom.fromTerraform.application_bucketname}
+  iam:
+    role: ${self:custom.fromTerraform.mentorship_lambda_iam}  
+  
+  apiGateway:
+    restApiId: ${self:custom.fromTerraform.mentorship_rest_api_id}
+    restApiRootResourceId: ${self:custom.fromTerraform.mentorship_rest_api_root_resource_id}  
   vpc:
     securityGroupIds:
-      - ${self:custom.fromTerraform.middleware_lambda_security_group_id}
-    subnetIds: ${self:custom.fromTerraform.aws_subnet_ids}
+      - ${self:custom.fromTerraform.mentorship_sg}
+    subnetIds:
+      - ${self:custom.fromTerraform.subnet_private_0}
+      - ${self:custom.fromTerraform.subnet_private_1}
   logs:
-    restApi: "${self:custom.fromTerraform.middleware_private_api_gateway_logs_enabled}"
-    frameworkLambda: false 
-  iamManagedPolicies: ${self:custom.fromTerraform.middleware_lambda_iam_policy_arns}
+    restApi: "${self:custom.fromTerraform.mentorship_rest_api_id}"
+    frameworkLambda: false
+  environment:
+    ${file(./configs/providers/${self:provider.name}/${opt:stage, self:provider.stage}/env.yml)}
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -51,9 +57,9 @@ provider:
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
       Resource:
-        - "arn:aws:sqs:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:${self:custom.queueName}-${opt:stage}"
-        - "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.tableName}"
-        - "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/*"
+        - "arn:aws:sqs:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:custom.queueName}-${opt:stage}"
+        - "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:table/${self:custom.tableName}"
+        - "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:table/*"
 
 functions:
   ${file(./configs/functions/functions.yml)}
