--- a/statistics-event-handler/serverless/configs/resources/rise-audit-queue.yml
+++ b/statistics-event-handler/serverless/configs/resources/rise-audit-queue.yml
@@ -62,7 +62,7 @@ Resources:
   # RtsUiTransformerSubscriptionFilter:
   #   Type: AWS::Logs::SubscriptionFilter
   #   Properties: 
-  #     DestinationArn: arn:aws:lambda:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:function:datadog-log-shipper-lambda-${self:provider.stage}
+  #     DestinationArn: arn:aws:lambda:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:function:datadog-log-shipper-lambda-${self:provider.stage}
   #     FilterPattern: ''
   #     LogGroupName: 
   #       Ref: AuditRtsLogGroup
