--- a/rise-event-sub/serverless/configs/resources/success-queue.yml
+++ b/rise-event-sub/serverless/configs/resources/success-queue.yml
@@ -49,10 +49,10 @@ Resources:
     Properties:
       LogGroupName: /aws/lambda/${opt:stage, self:provider.stage}-${self:service}
       RetentionInDays: ${self:custom.fromTerraform.middleware_cloudwatch_log_group_retention_period}
-  AuditSuccessSubscriptionFilter:
-    Type: AWS::Logs::SubscriptionFilter
-    Properties: 
-      DestinationArn: arn:aws:lambda:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:function:datadog-log-shipper-lambda-${self:provider.stage}
-      FilterPattern: ''
-      LogGroupName: 
-        Ref: AuditSuccessLogGroup
+  # AuditSuccessSubscriptionFilter:
+  #   Type: AWS::Logs::SubscriptionFilter
+  #   Properties: 
+  #     DestinationArn: arn:aws:lambda:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:function:datadog-log-shipper-lambda-${self:provider.stage}
+  #     FilterPattern: ''
+  #     LogGroupName: 
+  #       Ref: AuditSuccessLogGroup
