--- a/rise-event-sub/serverless/configs/resources/success-queue.yml
+++ b/rise-event-sub/serverless/configs/resources/success-queue.yml
@@ -3,7 +3,7 @@ Resources:
     Type: "AWS::SQS::Queue"
     DeletionPolicy: Retain
     Properties:
-      QueueName: ${self:provider.stage}-rise-audit-sub-queue
+      QueueName: ${self:provider.stage}-${self:custom.queueName}
       DelaySeconds: 0
       MaximumMessageSize: 262144
       MessageRetentionPeriod: 345600   
@@ -34,7 +34,7 @@ Resources:
   SuccessQueueSubscription:
       Type: 'AWS::SNS::Subscription'
       Properties:
-        TopicArn: "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
+        TopicArn: "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-rise-audit-topic"
         Endpoint: !GetAtt
           - SuccessQueue
           - Arn
