--- a/rise-event-sub/serverless/serverless.yml
+++ b/rise-event-sub/serverless/serverless.yml
@@ -58,8 +58,8 @@ provider:
         - dynamodb:DeleteItem
       Resource:
         - "arn:aws:sqs:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-${self:custom.queueName}"
-        - "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:table/${self:custom.tableName}"
-        - "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:table/*"
+        # - "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:table/${self:custom.tableName}"
+        # - "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:table/*"
 
 functions:
   ${file(./configs/functions/functions.yml)}
