--- a/rise-event-sub/serverless/configs/resources/success-queue.yml
+++ b/rise-event-sub/serverless/configs/resources/success-queue.yml
@@ -3,14 +3,14 @@ Resources:
     Type: "AWS::SQS::Queue"
     DeletionPolicy: Retain
     Properties:
-      QueueName: ${self:provider.stage}-${self:custom.queueName}
+      QueueName: ${opt:stage}-${self:custom.queueName}
       DelaySeconds: 0
       MaximumMessageSize: 262144
       MessageRetentionPeriod: 345600   
       ReceiveMessageWaitTimeSeconds: 20
       VisibilityTimeout: 60
       # KmsMasterKeyId: alias/aws/sqs
-      Tags: ${self:custom.fromTerraform.middleware_common_tags_cloudformation}
+      Tags: ${self:custom.fromTerraform.common_tags}
 
   snsToSuccessQueueSqsPolicy:
       Type: AWS::SQS::QueuePolicy
@@ -27,7 +27,7 @@ Resources:
               Action: "SQS:SendMessage"
               Condition:
                 ArnEquals:
-                  "aws:SourceArn": "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-eif-audit-topic"
+                  "aws:SourceArn": "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-rise-audit-topic"
         Queues:
           - Ref: "SuccessQueue"
 
@@ -44,11 +44,11 @@ Resources:
         Protocol: sqs
         RawMessageDelivery: 'false'
 
-  AuditSuccessLogGroup:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: /aws/lambda/${opt:stage, self:provider.stage}-${self:service}
-      RetentionInDays: ${self:custom.fromTerraform.middleware_cloudwatch_log_group_retention_period}
+  # AuditSuccessLogGroup:
+  #   Type: AWS::Logs::LogGroup
+  #   Properties:
+  #     LogGroupName: /aws/lambda/${opt:stage, self:provider.stage}-${self:service}
+  #     RetentionInDays: ${self:custom.fromTerraform.middleware_cloudwatch_log_group_retention_period}
   # AuditSuccessSubscriptionFilter:
   #   Type: AWS::Logs::SubscriptionFilter
   #   Properties: 
