--- a/rise-event-sub/serverless/serverless.yml
+++ b/rise-event-sub/serverless/serverless.yml
@@ -1,4 +1,4 @@
-service: rise-event-handler-1
+service: rise-event-handler-2
 
 plugins:
   localPath: '/usr/local/lib/node_modules/'
@@ -8,7 +8,7 @@ plugins:
 
 custom:
   fromTerraform: ${file(../../common/serverless/sls_terraform_outputs.js)}
-  queueName: rise-audit-qu
+  queueName: rise-audit-quue
   tableName: object-processed-metadata-${opt:stage, self:provider.stage}
   # stagingTableName: staging-data-${opt:stage, self:provider.stage}
   prune:
@@ -65,6 +65,6 @@ functions:
   ${file(./configs/functions/functions.yml)}
 
 resources:
-  # ${file(./configs/resources/success-queue.yml)}
-  ${file(./configs/resources/log-group-and-subscription.yml)}
+  ${file(./configs/resources/success-queue.yml)}
+  # ${file(./configs/resources/log-group-and-subscription.yml)}
 #   ${file(./configs/resources/object-processed-metadata-table.yml)}
