--- a/rise-event-sub/serverless/configs/resources/success-queue.yml
+++ b/rise-event-sub/serverless/configs/resources/success-queue.yml
@@ -1,9 +1,9 @@
 Resources:
-  SuccessQueue:
+  Siddhiraj:
     Type: "AWS::SQS::Queue"
     DeletionPolicy: Retain
     Properties:
-      QueueName: dev-rise-audit-queue
+      QueueName: rise-audit-queue-test
       DelaySeconds: 0
       MaximumMessageSize: 262144
       MessageRetentionPeriod: 345600   
@@ -12,7 +12,7 @@ Resources:
       # KmsMasterKeyId: alias/aws/sqs
       # Tags: ${self:custom.fromTerraform.common_tags}
 
-  snsToSuccessQueueSqsPolicy:
+  snsToSiddhirajSqsPolicy:
       Type: AWS::SQS::QueuePolicy
       Properties:
         PolicyDocument:
@@ -22,21 +22,21 @@ Resources:
               Effect: Allow
               Principal: "*"
               Resource: !GetAtt
-                - SuccessQueue
+                - Siddhiraj
                 - Arn
               Action: "SQS:SendMessage"
               Condition:
                 ArnEquals:
                   "aws:SourceArn": "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-rise-audit-topic"
         Queues:
-          - Ref: "SuccessQueue"
+          - Ref: "Siddhiraj"
 
-  SuccessQueueSubscription:
+  SiddhirajSubscription:
       Type: 'AWS::SNS::Subscription'
       Properties:
         TopicArn: "arn:aws:sns:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${self:provider.stage}-rise-audit-topic"
         Endpoint: !GetAtt
-          - SuccessQueue
+          - Siddhiraj
           - Arn
         FilterPolicy:
           status: [success]
