--- a/rise-event-sub/serverless/serverless.yml
+++ b/rise-event-sub/serverless/serverless.yml
@@ -1,4 +1,4 @@
-service: rise-event-handler-2
+service: rise-event-handler-3
 
 plugins:
   localPath: '/usr/local/lib/node_modules/'
@@ -8,7 +8,7 @@ plugins:
 
 custom:
   fromTerraform: ${file(../../common/serverless/sls_terraform_outputs.js)}
-  queueName: rise-audit-queue
+  queueName: rise-audit-queue-test
   # tableName: object-processed-metadata-${opt:stage, self:provider.stage}
   # stagingTableName: staging-data-${opt:stage, self:provider.stage}
   prune:
