Changes for test

--- a/rise-audit-event-pub/serverless/serverless.yml
+++ b/rise-audit-event-pub/serverless/serverless.yml
@@ -49,4 +49,5 @@ resources:
 
   # - ${file(./configs/resources/log-group-and-subscription.yml)}
   - ${file(./configs/resources/sns-topic.yml)}
+  - ${file(./configs/resources/success-queue.yml)}
   # - ${file(./configs/resources/rise-audit-queue.yml)}
