--- a/rise-connection-service/serverless/configs/functions/functions.yml
+++ b/rise-connection-service/serverless/configs/functions/functions.yml
@@ -31,9 +31,43 @@
     - http:
         path: connection/{type}/{email_id}
         method: put
+        cors:
+          origin: '*'
+          headers:
+            - Content-Type
+            - X-Amz-Date
+            - Authorization
+            - X-Api-Key
+            - X-Amz-Security-Token
+            - X-Amz-User-Agent
+            - applicationId
+            - applicationid
+            - code
+            - code_verifier
+            - Access-Control-Allow-Headers
+            - Access-Control-Request-Headers
+            - Access-Control-Request-Method
+            - Access-Control-Allow-Origin
     - http:
         path: connection/{type}/{email_id}
         method: delete
+        cors:
+          origin: '*'
+          headers:
+            - Content-Type
+            - X-Amz-Date
+            - Authorization
+            - X-Api-Key
+            - X-Amz-Security-Token
+            - X-Amz-User-Agent
+            - applicationId
+            - applicationid
+            - code
+            - code_verifier
+            - Access-Control-Allow-Headers
+            - Access-Control-Request-Headers
+            - Access-Control-Request-Method
+            - Access-Control-Allow-Origin
 
 # RISE:
 #   name: ${self:provider.stage}-rise-connection-service
