--- a/rise-event-sub/serverless/configs/resources/success-queue.yml
+++ b/rise-event-sub/serverless/configs/resources/success-queue.yml
@@ -44,11 +44,11 @@ Resources:
         Protocol: sqs
         RawMessageDelivery: 'false'
 
-  # AuditSuccessLogGroup:
-  #   Type: AWS::Logs::LogGroup
-  #   Properties:
-  #     LogGroupName: /aws/lambda/${opt:stage, self:provider.stage}-${self:service}
-  #     RetentionInDays: 5
+  AuditSuccessLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: /aws/lambda/${opt:stage, self:provider.stage}-${self:service}
+      RetentionInDays: 5
   # AuditSuccessSubscriptionFilter:
   #   Type: AWS::Logs::SubscriptionFilter
   #   Properties: 
