--- a/rise-email-utility/serverless/serverless.yml
+++ b/rise-email-utility/serverless/serverless.yml
@@ -24,7 +24,7 @@ provider:
   stackName: sls-${self:service}-${opt:stage, self:provider.stage}-stack
   stackTags: ${self:custom.fromTerraform.common_tags}
   tags: ${self:custom.fromTerraform.common_tags}
-  deploymentBucket: ${self:custom.fromTerraform.application_bucketname}
+  deploymentBucket: tvx-mentorship-deployment-dev
   iam:
     role: ${self:custom.fromTerraform.mentorship_lambda_iam}  
   
