--- a/rise-email-utility/serverless/configs/functions/functions.yml
+++ b/rise-email-utility/serverless/configs/functions/functions.yml
@@ -13,7 +13,7 @@
         path: /email/test
         method: get
 
-    # events:
-    #   - sqs:
-    #       arn: arn:aws:sqs:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${opt:stage}-${self:custom.queueName}
-    #       batchSize: 10
+    events:
+      - sqs:
+          arn: arn:aws:sqs:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:${opt:stage}-${self:custom.queueName}
+          batchSize: 10
